1.3.1: April 18, 2008
 * Now if you try to load a page where access is required, and you're not
   logged in, you'll be redirected to a login page. After you login, you'll
   be redirected to the page you were originally trying to access.

1.3.0: April 16, 2008
 * Created a new hierarchical note tree area for browsing notes.
 * Added a list of recent notes.
 * Made links to external sites displayed with a little icon, at least in
   Firefox.

1.2.24: April 4, 2008
 * Several cosmetic and layout changes to the wiki editing page.
 * Added rss icon to blog subscribe link.

1.2.23: April 2, 2008
 * Now displaying a thumbnail in the file info box for uploaded image files.
 * When you click on a link for an image file, a new window opens where you
   can see the full image and optionally download it.

1.2.22: March 30, 2008
 * Made Html_cleaner strip HTML comments, which Open Office adds for styling
   purposes.

1.2.21: March 30, 2008
 * Made Html_cleaner support many more HTML tags and attributes, so users can
   cut and paste from other programs into Luminotes.

1.2.20: March 29, 2008
 * Fixed a bug in which closing a Luminotes window with an unsaved note in
   Firefox would occasionally not save it.

1.2.19: March 26, 2008
 * Increased default socket timeout so as not to timeout slow clients.
 * Fixed a bug in which Files.purge_unused() deleted the file for a file link
   that had a quote_filename parameter.

1.2.18: March 24, 2008
 * Newly redesigned upgrade/pricing/signup page. You can now signup for a
   Luminotes account and upgrade to a paid plan all at once.
 * Added some new user quotes on the front page.

1.2.17: March 18, 2008
 * Internet Explorer expects quoted download filenames, while Firefox
   doesn't. So I took that into account by quoting conditionally based on the
   detected browser.

1.2.16: March 18, 2008
 * Fixed a bug that prevented the upload of filenames with special characters
   in them.

1.2.15: March 17, 2008