@@ -2,6 +2,9 @@
  * Now if you try to load a page where access is required, and you're not
    logged in, you'll be redirected to a login page. After you login, you'll
    be redirected to the page you were originally trying to access.
+ * Fixed bug where recent notes were ordered by creation time instead of
+   revision time.
+ * Added RSS subscription link to all notebooks.
 
 1.3.0: April 16, 2008
  * Created a new hierarchical note tree area for browsing notes.
